kubernetes/kustomize/zabbix/zabbix-agent.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: zabbix-agent
  labels:
    app: zabbix
    tier: agent
spec:
  selector:
    matchLabels:
      name: zabbix-agent
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: zabbix-agent
        app: zabbix
    spec:
      hostNetwork: true
      hostIPC: true
      hostPID: true
      containers:
        - name: zabbix-agent
          image: zabbix/zabbix-agent2:alpine-7.0.22
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 54Mi
            limits:
              cpu: 100m
              memory: 54Mi
          ports:
            - containerPort: 10050
              name: zabbix-agent
          livenessProbe:
            tcpSocket:
              port: 10050
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 2
          securityContext:
            capabilities: {}
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: true
          volumeMounts:
            - name: dev-volume
              mountPath: /node/dev
            - name: procfs-volume
              readOnly: true
              mountPath: /node/proc
            - name: boot-volume
              readOnly: true
              mountPath: /node/boot
            - name: run-volume
              mountPath: /node/run
            - name: var-run-volume
              mountPath: /node/var/run
      volumes:
        - name: dev-volume
          hostPath:
            path: /dev
            type: ""
        - name: procfs-volume
          hostPath:
            path: /proc
            type: ""
        - name: boot-volume
          hostPath:
            path: /boot
            type: ""
        - name: run-volume
          hostPath:
            path: /run
            type: ""
        - name: var-run-volume
          hostPath:
            path: /var/run
            type: ""
