kubernetes/kustomize/zabbix/zabbix-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-server-1
  labels:
    app: zabbix-server-1
spec:
  selector:
    matchLabels:
      app: zabbix-server-1
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zabbix-server-1
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - zabbix-server-2
              topologyKey: "kubernetes.io/hostname"
      restartPolicy: Always
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: zabbix-server-1
          image: zabbix/zabbix-server-pgsql:ubuntu-7.0.22
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              memory: 2G
          ports:
            - containerPort: 10051
              name: zabbix-server-1
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-1
  labels:
    app: zabbix-server-1
spec:
  type: ClusterIP
  ports:
    - name: zabbix-server-1
      port: 10051
      targetPort: 10051
  selector:
    app: zabbix-server-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-server-2
  labels:
    app: zabbix-server-2
spec:
  selector:
    matchLabels:
      app: zabbix-server-2
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zabbix-server-2
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - zabbix-server-1
              topologyKey: "kubernetes.io/hostname"
      restartPolicy: Always
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: zabbix-server-2
          image: zabbix/zabbix-server-pgsql:ubuntu-7.0.22
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              memory: 2G
          ports:
            - containerPort: 10051
              name: zabbix-server-2
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-2
  labels:
    app: zabbix-server-2
spec:
  type: ClusterIP
  ports:
    - name: zabbix-server-2
      port: 10051
      targetPort: 10051
  selector:
    app: zabbix-server-2
