kubernetes/kustomize/zabbix/zabbix-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web
  labels:
    app: zabbix-web
spec:
  selector:
    matchLabels:
      app: zabbix-web
  replicas: 2
  template:
    metadata:
      labels:
        app: zabbix-web
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - zabbix-web
              topologyKey: "kubernetes.io/hostname"
      restartPolicy: Always
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: zabbix-web
          image: zabbix/zabbix-web-nginx-pgsql:ubuntu-7.0.22
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              memory: 500M

          ports:
            - containerPort: 8080
              name: zabbix-web
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web
  labels:
    app: zabbix-web
spec:
  type: ClusterIP
  ports:
    - name: zabbix-web
      port: 8080
      targetPort: 8080
  selector:
    app: zabbix-web
